add footer and booking-panel component

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="assets/icon/favicon.png" />
+      href="assets/favicon/favicon.png" />
   </head>
   <body>
     <app-root></app-root>
