added meta description in index.html file

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Welcome to the Ultimate Game Bar where fun and games come alive! Enjoy arcade machines, board games, console showdowns, and intense PC battles." />
     <link
       rel="icon"
       type="image/x-icon"
